bootstrap/argocd/patch-applicationset-controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-applicationset-controller
spec:
  replicas: 0
