bootstrap/argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: argocd-server-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service: 
            name: argocd-server
            port: 
              name: https
